# Distributed-Graph-Analytics-Engine

./: CMakeLists.txt  README.md  README_EXTENSIONS.md
.cache/clangd/index/: Engine.hpp.E5F9E4CF701A8103.idx  Graph.cpp.012710B4B4221935.idx  Graph.hpp.63CCC77022C08329.idx  LabelPropagation.hpp.9FBD01A3E5DE8C95.idx  MPI_Wrapper.hpp.114D60BF7E405F92.idx  PageRank.hpp.DB9A03FE66FA5A59.idx  Types.hpp.18F108E18FAABEF1.idx  main.cpp.C625C1E8BEA531AC.idx  mock_mpi.hpp.E74F37DE3B61CE8C.idx
data/: interactive_graph.txt  sample.txt
include/: mock_mpi.hpp
include/dgraph/: Engine.hpp  Graph.hpp  IAlgorithm.hpp  MPI_Wrapper.hpp  Types.hpp
include/dgraph/algorithms/: BFS.hpp  ConnectedComponents.hpp  LabelPropagation.hpp  PageRank.hpp  RandomWalk.hpp
include/dgraph/plugins/: BuiltinAlgorithms.hpp  UserAlgorithms.hpp
scripts/: train_embeddings.py
src/: Graph.cpp  main.cpp
tools/: generate_graph.py  test_interactive.py
viz/: app.py
viz/templates/: index.html
